--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
   </head>
 
   <body id="body">
-    <h2>疫距兩得</h2>
+    <div class="title">
+      <img src="../icon/icon.png" alt="">
+      <h2>疫距兩得</h2>
+    </div>
     <input type="text" id="name" placeholder="輸入Google meet名字">
     <input type="text" id="studentID" placeholder="輸入你的學號">
     <button id="start">開始上課</button>
